--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ From there on, I've tried to incorporate a one to one replication of the project
 
 :root {
     /* Grayscale */
-    --color-gray-100: #F3F6FF; /* Light BG */
+    --color-gray-100: #f3f6ff; /* Light BG */
+    --color-gray-100-hsl: 224, 100%, 97%;
     --color-gray-200: #EFF2FC; /* Secondary */
     --color-gray-300: #E2E5F1; /* Divider, Border */
     --color-gray-400: #D4D7E5; /* Forms Border */
@@ -15,6 +16,7 @@ From there on, I've tried to incorporate a one to one replication of the project
     --color-gray-700: #565973; /* Body Text */
     --color-gray-800: #33354D; /* Navigation */
     --color-gray-900: #0B0F19; /* Header, Dark */
+
     /* Brand */
     --color-primary: #6366F1; /* Brand, Primary */
     --color-secondary: #585C7B; /* Some Text */
@@ -38,6 +40,12 @@ From there on, I've tried to incorporate a one to one replication of the project
     --container-padding: 1rem;
     --transition-time: all 0.2s;
 
+    /* Heading Gradient Colours - LIGHT/DARK */ /* Got some help from ChatGPT here (Hex press to hsl didn't work for the background.) */
+    --clr-grad-1: 221, 87%, 95%; /* HSL values for #F1F4FD */
+    --clr-grad-2: 293, 82%, 60%; /* HSL values for #DA46EF */
+    --clr-grad-3: 238, 80%, 67%; /* HSL values for #6366F1 */
+    
+    
 }
 
 /* ------------------------------------------------------------- MOBILE VERSION / BASE-LINE CONFIGURATION */
@@ -73,6 +81,22 @@ body {
     display: grid;
     grid-template-rows: auto 1fr auto;
     height: 100vh;
+}
+
+.grad {
+    /* For browsers that doesn't support gradient. . . . . . . . . . . . . IE? */
+    /* background-image: url(/images/light/background/headerbg-light.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; */
+    background-color: #fff;
+
+    /* Gradient background */ /* Got some help from ChatGPT here, or rather mostly with changing the colours in the root section. */
+    background: linear-gradient(170deg, 
+    hsla(var(--clr-grad-1), 0.1) 30%,
+    hsla(var(--clr-grad-2), 0.1) 70%,
+    hsla(var(--clr-grad-3), 0.1) 100%
+    );
 }
 
 /* This code dictates how links should behave. */
@@ -203,11 +227,45 @@ a:hover {
         background-color: var(--color-primary);
     }
 
+    #showcase-item-2 {
+        h2 {
+            color: var(--color-white);
+            opacity: 70%;
+            font-weight: 400;
+        }
+    }
     #showcase-item-5 {
-        color: var(--color-white);
+
+        p {
+            color: var(--color-white);
+            opacity: 50%;
+
+        }
     }
     .brand-box {
         background-color: var(--color-almostblack-blue);
+    }
+
+    .app-features-info {
+
+        #af-title-text {
+            color: var(--color-white);
+            opacity: 70%;
+        }
+        
+    }
+    .features .af-text-container {
+
+        p {
+            color: var(--color-white);
+            opacity: 70%;
+        }
+    }
+    
+    .af-img-container {
+        opacity: 5%;
+        
+        /* I CAN'T GET THE ICON TO SHOW WITH FULL OPACITY AFTER USING THIS OPTION! */
     }
     
 }
@@ -222,6 +280,7 @@ a:hover {
     border: none;
     font-size: 2rem;
     padding-top: .25rem;
+    
 }
 
 /* This part handles the toggle button, for dark/light mode. */
@@ -304,7 +363,6 @@ a:hover {
 #logo {
     display: flex;
     align-items: center;
-    padding-top: 4.3px;
     gap: 8px;
     /* I can't make the logo bigger. !"/ */
     /* max-height: 50px;
@@ -357,17 +415,10 @@ header .container {
 
     text-align: center;
 }
-.showcase-grid {
-    /* background-color: var(--color-primary); */
+.showcase-grid { 
     display: grid;
     place-items: center;
     
-}
-#showcase {
-    background-image: url(/images/light/background/headerbg-light.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
 /* Heading Title. */
@@ -390,10 +441,18 @@ header .container {
 /* Apple Appstore Button */
 #showcase-item-3 {
     width: 100%;
+    
+    #appstore-logotype {
+        transform: scale(1.4);
+    }
 }
 /* Google Play Store Button */
 #showcase-item-4 {
     width: 100%;
+
+    #playstore-logotype {
+        transform: scale(1.4);
+    }
 }
 /* Heading "Discover more" */
 #showcase-item-5 {
@@ -402,13 +461,22 @@ header .container {
     align-items: center;
     gap: 15px;
     padding: 25px;
+    margin-bottom: 1rem;
+    font-weight: 100;
 
+    #chevron-down-icon {
+        transform: scale(1.2);
+    }
 }
 /* Heading Stacked phone picture */
 /* #showcase-item-6 {
     display: none;
 } */
 #heading-phone-stacked {
+    display: none;
+}
+
+#line {
     display: none;
 }
 
@@ -441,61 +509,89 @@ header .container {
 
 /* --------------------------------------------------------------- MOBILE APP FEATURES SECTION */
 /* MOBILE APP FEATURES SECTION */
+
+#af-phone {
+    display: none;
+}
+
+
+app-features-grid {
+    display: grid;
+}
 .app-features-info {
-    
+    text-align: center;
+
+    #af-title {
+        font-size: 2rem;
+        font-weight: 800;
+    }
     
     #af-title-text {
+        color: var(--color-gray-800);
+        font-size: 1.1rem;
+
         margin-bottom: 2rem;
         
     }
 }
+
 .features-grid {
     display: grid;
     grid-template-columns: 1fr;
-    justify-items: center;
+    gap: 1rem;
     
-    
-}
-
-.af-img-container {
-    background-color: var(--color-gray-300);
-    padding: 8px;
-    border-radius: 8px;
 }
 
 .features {
-    display: flex;
-    padding-inline: 3rem;
-    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    grid-template-rows: auto;
+    justify-content: flex-start;
+    width: 100%;
+    /* display: flex; */
+    /* padding-inline: 3rem; */
+    /* margin: 0 auto; */
     /* max-width: 900px; */
-    max-width: 1500px;
+    /* max-width: 1500px; */
     /* display: grid; */
-    gap: 2rem;
+    gap: 1.3rem;
     
-    p {
-        color: var(--color-secondary);
+    
+    .af-img-container {
+        /* background-color: var(--color-gray-300); */
+        /* padding: 8px; */
+        /* border-radius: 8px; */
+
+        padding: 14px;
+        width: 3.6rem;
+        height: 3.6rem;
+        border-radius: 8px;
+        margin-top: 1rem;
+        
+        background-color: var(--color-gray-100);
+        
+    }
+
+
+    .af-text-container {
+        gap: 3rem;
+
+        h2 {
+            font-size: 1.3rem;
+        }
+
+        p {
+            color: var(--color-secondary);
+            /* font-size: 1rem; */
+        }
     }
 
 }
 
 #features-1 {
-    
+    margin-bottom: 10px;
 }
-#features-2 {
 
-}
-#features-3 {
-
-}
-#features-4 {
-
-}
-#features-5 {
-
-}
-#features-6 {
-
-}
 
 
 /* --------------------------------------------------------------- MOBILE FOOTER SECTION */
@@ -557,14 +653,14 @@ footer {
 
     /* Title */
     #showcase-item-1 {
-        grid-column: 1 / span 15;
+        grid-column: 1 / span 4;
    
     }
     /* Text */
     #showcase-item-2 {
-        grid-column: 1 / span 6;
-        grid-row-start: 3;
-        grid-row-end: 3;
+        grid-column: 1 / span 2;
+        grid-row-start: 2;
+        grid-row-end: 2;
 
         text-align: left;
         font-size: 13px;
@@ -580,36 +676,46 @@ footer {
     /* Appstore */
     #showcase-item-3 {
         grid-column: 1 / span 1;
-        grid-row: 4;
+        grid-row: 3;
         margin-right: -10px;
-        margin-left: -15px;
+        margin-left: -11px;
+
+        #appstore-logotype {
+            padding: 0 3px;
+            transform: scale(1.1);
+        }
         
     }
     /* Google Play */
     #showcase-item-4 {
         grid-column: 2 / span 1;
-        grid-row: 4;
+        grid-row: 3;
+        
+        #playstore-logotype {
+            transform: scale(1.2);
+            padding: 0 5px;
+        }
     }
 
     /* Discover more */
     #showcase-item-5 {
         grid-column: 1 / span 2;
-        grid-row: 5 / span 1;
+        grid-row: 4 / span 1;
         width: 100%;
         color: var(--color-secondary);
         margin-top: -35px;
-        margin-left: -5rem;
+        margin-left: -4.75rem;
 
         transform: scale(.8);
         #chevron-down-icon {
-            transform: scale(1.5);
+            transform: scale(1.2);
         }
     }
     /* Stacked phones */
     #showcase-item-6 {
-        grid-column: 7 / span 10;
+        grid-column: 4 / span 1;
         grid-row-start: 2;
-        grid-row-end: 15;
+        grid-row-end: 5;
         margin-right: 25px;
     }
 
@@ -622,17 +728,17 @@ footer {
         max-width: 115%; /* Image scales down with window */
         max-height: auto; /* Maintain aspect ratio */
     }
-
-    .showcase-grid {
-        /* background: #f4f4f4; */ /* Example background color */   
-    }
     
+    #line {
+        display: block;
+    }
     /* (ChatGPT) */
     .full-width-line {
         width: 100%;
         border: none;          /* Remove default styling */
         border-top: 2px solid black;  /* Define the line */
         margin: 0;             /* Adjust margins as needed */
+        color: var(--color-almostblack-blue);
     }
 
 
@@ -643,7 +749,16 @@ footer {
 
         #brand-5, #brand-6 { display: none; }
     }
+    
 
+    /* --------------------------------------------------------------- TABLET APP-FEATURES SECTION */
+    /* TABLET APP-FEATURES SECTION */
+
+    .features-grid {
+        grid-template-columns: 1fr 1fr;        
+    }
+    
+    
     /* --------------------------------------------------------------- TABLET FOOTER SECTION */
     /* TABLET FOOTER SECTION */
     footer .container {
@@ -680,6 +795,9 @@ footer {
         align-content: center;
         margin-top: .32rem;
     }
+    #logo {
+        padding-top: 4.5px;
+    }
     #auth-signin-create {
         /* Sign in / up button Show/Hide */
         display: block;
@@ -697,7 +815,7 @@ footer {
         display: grid;
         grid-template-columns: 25% 25% 50%; /* 3 columns - 25%, 25%, 50% */
         grid-template-rows: repeat(4, auto); /* 5 rows */
-        gap: 10px; /* Adjust the gap as needed */
+        /* gap: 10px; */ /* Adjust the gap as needed */
         
     }
     
@@ -707,8 +825,8 @@ footer {
         grid-column: 1 / span 2; 
         grid-row: 1;
         margin-top: 5rem;
-        margin-left: -6rem;
-
+        /* margin-left: -6rem; */
+        justify-content: flex-start;
         text-align: left;
         
     }
@@ -719,7 +837,7 @@ footer {
         grid-row: 2; 
         font-size: .7rem;
         margin-top: -2rem;
-        margin-left: -6rem;
+        justify-content: flex-start;
         margin-bottom: .3rem;
     }
 
@@ -728,9 +846,10 @@ footer {
         grid-column: 1; 
         grid-row: 3; 
         width: 100%; 
-        transform: scale(1.2); /* ChatGPT */
-        margin-right: -12rem;
-        margin-left: .3rem;
+        transform: scale(1.3); /* ChatGPT */
+        /* margin-right: -12rem; */
+        margin-left: .5rem;
+        justify-content: flex-start;
         margin-bottom: 20rem; 
     }
 
@@ -739,7 +858,7 @@ footer {
         grid-column: 2; 
         grid-row: 3;
         width: 100%;
-        transform: scale(1.2); /* ChatGPT */
+        transform: scale(1.3); /* ChatGPT */
         margin-right: 18rem;
         margin-left: -4.5rem;
         margin-bottom: 20rem; 
@@ -751,7 +870,8 @@ footer {
         grid-row: 4;
         width: 100%;
         margin-top: -13rem;
-        margin-left: -12rem;
+        /* margin-left: -12rem; */
+        justify-content: flex-start;
         /* font-size: 14px; */
         
         
@@ -767,7 +887,7 @@ footer {
         grid-row: 1 / span 4; 
         margin-right: -.2rem;
         margin-top: 2rem;
-        margin-bottom: -4.5rem;
+        margin-bottom: -2.5rem;
     }
     
 
@@ -776,17 +896,41 @@ footer {
         max-width: 100%;
     }
 
+    
     /* --------------------------------------------------------------- DESKTOP BRANDS SECTION */
     /* DESKTOP BRANDS SECTION */
+    
     #brands {
         display: block;
         margin-top: 4.5rem;
+        margin-bottom: 4rem;
 
         #brand-5, #brand-6 { display: flex; }
     }
+    
+    
+    /* --------------------------------------------------------------- DESKTOP APP-FEATURES SECTION */
+    /* DESKTOP APP-FEATURES SECTION */
 
+
+    .flexit {
+        display: flex;
+        flex-direction: row;
+
+        gap: 11rem;
+
+        #af-phone {
+            display: block;
+        }
+    }
+    .app-features-info {
+        text-align: start;
+    }
+    
+    
     /* --------------------------------------------------------------- DESKTOP FOOTER SECTION */
     /* DESKTOP FOOTER SECTION */
+    
     footer .container {
         padding-top: 2rem;
         padding-bottom: 2rem;
