updated the desktop "app features" section since it didn't look natural.

--- a/css/main.css
+++ b/css/main.css
@@ -946,6 +946,16 @@ footer {
     }
     .app-features-info {
         text-align: start;
+        
+        #af-title {
+            font-size: 3rem;
+            margin-top: -.3rem;
+        }
+        
+    }
+
+    .features-grid {
+        gap: 2rem;
     }
     
     
