--- a/css/main.css
+++ b/css/main.css
@@ -190,9 +190,9 @@ a:hover {
 .btn-app {
     background-color: var(--color-black);
     border-radius: 8px;
-    padding: 20px 25px;
+    padding: 10px 25px;
     width: 100%;
-    margin: 12px;
+    margin: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -248,17 +248,25 @@ a:hover {
         h2 {
             color: var(--color-white);
             opacity: 70%;
-            font-weight: 400;
         }
     }
     #showcase-item-5 {
 
         p {
             color: var(--color-white);
-            opacity: 50%;
+            opacity: 30%;
 
         }
     }
+    #showcase-item-5 {
+
+        p {
+            color: var(--color-white);
+            opacity: 25%;
+
+        }
+    }
+
     .brand-box {
         background-color: var(--color-almostblack-blue);
     }
@@ -438,13 +446,13 @@ header .container {
 
 /* Heading Title. */
 #showcase-item-1 {
-    font-size: 34px;
     font-weight: 800;
     /* text-align: center; */ 
 }
 /* Heading Text. */
 #showcase-item-2 {
-    font-size: 18px;
+    font-weight: 400;
+    font-size: 14px;
     /* text-align: center; */
     color: var(--color-secondary);
 }
@@ -455,10 +463,10 @@ header .container {
 
 /* Apple Appstore Button */
 #showcase-item-3 {
-    width: 100%;
+    width: 100%;    
 
     #appstore-logotype {
-        transform: scale(1.4);
+        transform: scale(1.1);
     }
 }
 /* Google Play Store Button */
@@ -466,7 +474,7 @@ header .container {
     width: 100%;
 
     #playstore-logotype {
-        transform: scale(1.4);
+        transform: scale(1.1);
     }
 }
 /* Heading "Discover more" */
@@ -477,11 +485,11 @@ header .container {
     gap: 15px;
     padding: 25px;
     margin-bottom: 1rem;
-    font-weight: 100;
 
-    #chevron-down-icon {
+    /* transform: scale(.8); */
+    /* #chevron-down-icon {
         transform: scale(1.2);
-    }
+    } */
 }
 /* Heading Stacked phone picture */
 /* #showcase-item-6 {
@@ -695,6 +703,7 @@ footer {
     /* Title */
     #showcase-item-1 {
         grid-column: 1 / span 4;
+        font-size: 2rem;
    
     }
     /* Text */
@@ -718,11 +727,11 @@ footer {
     #showcase-item-3 {
         grid-column: 1 / span 1;
         grid-row: 3;
-        margin-right: -10px;
-        margin-left: -11px;
+        margin-right: -5px;
+        margin-left: -7px;
 
         #appstore-logotype {
-            padding: 0 3px;
+            /* padding: 0 3px; */
             transform: scale(1.1);
         }
         
@@ -734,23 +743,25 @@ footer {
         
         #playstore-logotype {
             transform: scale(1.2);
-            padding: 0 5px;
+            /* padding: 0 5px; */
         }
     }
 
     /* Discover more */
     #showcase-item-5 {
-        grid-column: 1 / span 2;
+        grid-column: 1 / span 5;
         grid-row: 4 / span 1;
         width: 100%;
+        height: 6.rem;
         color: var(--color-secondary);
         margin-top: -35px;
-        margin-left: -4.75rem;
-
-        transform: scale(.8);
-        #chevron-down-icon {
+        margin-left: -1.5rem;
+        justify-content: flex-start;
+        font-size: .94rem;
+        /* transform: scale(.8); */
+        /* #chevron-down-icon {
             transform: scale(1.2);
-        }
+        } */
     }
     /* Stacked phones */
     #showcase-item-6 {
@@ -869,6 +880,8 @@ footer {
         /* margin-left: -6rem; */
         justify-content: flex-start;
         text-align: left;
+
+        /* font-size: 34px; */
         
     }
 
@@ -889,7 +902,7 @@ footer {
         width: 100%; 
         transform: scale(1.3); /* ChatGPT */
         /* margin-right: -12rem; */
-        margin-left: .5rem;
+        margin-left: 17px;
         justify-content: flex-start;
         margin-bottom: 20rem; 
     }
@@ -901,7 +914,7 @@ footer {
         width: 100%;
         transform: scale(1.3); /* ChatGPT */
         margin-right: 18rem;
-        margin-left: -4.5rem;
+        margin-left: -4.59rem;
         margin-bottom: 20rem; 
     }
 
@@ -912,7 +925,7 @@ footer {
         width: 100%;
         margin-top: -13rem;
         /* margin-left: -12rem; */
-        justify-content: flex-start;
+        /* justify-content: flex-start; */
         /* font-size: 14px; */
         
         
@@ -925,10 +938,10 @@ footer {
     /* Stacked phones (spans from row 1 to row 5 on the right side) */
     #showcase-item-6 {
         grid-column: 3; 
-        grid-row: 1 / span 4; 
+        grid-row: 1 / span 3; 
         margin-right: -.2rem;
         margin-top: 2rem;
-        margin-bottom: -2.5rem;
+        margin-bottom: -1.38rem;
     }
     
 
