--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,27 @@
 there's been some deviation from it, and colours added since this is something the project refers to.
 From there on, I've tried to incorporate a one to one replication of the project file, in order to make this 'website'. */
 
+/* FONT - MANROPE | GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+
+.manrope-Regular {
+    font-family: "Manrope", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+.manrope-SemiBold {
+    font-family: "Manrope", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+.manrope-ExtraBold {
+    font-family: "Manrope", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+}
 
 :root {
     /* Grayscale */
@@ -76,6 +96,27 @@ body {
     font-size: 18px;
 }
 
+h1 {
+    
+    font-size: 34px;
+            
+    @media (min-width: 768px) {
+        font-size: 44px;
+    }
+            
+    @media (min-width: 1400px) {
+        font-size: 56px;
+    }
+}
+
+h2 {
+    font-size: 20px;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* This part divides the site into multiple grids, for the ease of manipulating of the code. */
 .wrapper {
     display: grid;
@@ -146,6 +187,45 @@ a:hover {
 }
 .btn-primary i {
     margin-right: .5rem;
+}
+
+/* Default light mode styles */
+.btn-circle {
+    height: 44px;
+    width: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 50%;
+    /* border: 1px solid var(--color-gray-100); */
+    color: var(--color-black);
+    z-index: 1;
+}
+
+.btn-circle::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: var(--color-white);
+    transition: background-color 0.3s ease, opacity 0.3s ease;
+    z-index: -1;
+}
+
+.btn-circle:hover {
+    color: var(--color-primary);
+}
+
+body.dark-mode .btn-circle {
+    color: rgba(255, 255, 255, 1);
+
+    &::before {
+        background-color: rgba(255, 255, 255, 0.05);
+    }
 }
 
 .btn-round-white {
@@ -287,6 +367,9 @@ a:hover {
         }
     }
     
+    .discover-more {
+        color: rgba(255, 255, 255, 0.5);
+    }
 
     #sticky-header.scrolled {
         background-color: var(--color-gray-900);
@@ -495,6 +578,29 @@ header .container {
 /* #showcase-item-6 {
     display: none;
 } */
+
+.discover-more {
+    color: var(--color-gray-900);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    /* margin-top: 2.5rem; */
+    
+    &:hover {
+        color: var(--color-primary);
+    }
+
+    @media (min-width: 768px) {
+        justify-content: flex-start;
+        
+    }
+    
+    @media (min-width: 1400px) {
+        margin-top: 3rem;
+    }
+}
+
 #heading-phone-stacked {
     display: none;
 }
@@ -876,7 +982,7 @@ footer {
     #showcase-item-1 {
         grid-column: 1 / span 2; 
         grid-row: 1;
-        margin-top: 5rem;
+        margin-top: 3rem;
         /* margin-left: -6rem; */
         justify-content: flex-start;
         text-align: left;
@@ -892,7 +998,7 @@ footer {
         font-size: .7rem;
         margin-top: -2rem;
         justify-content: flex-start;
-        margin-bottom: .3rem;
+        margin-bottom: 2rem;
     }
 
     /* Appstore */
@@ -904,7 +1010,7 @@ footer {
         /* margin-right: -12rem; */
         margin-left: 17px;
         justify-content: flex-start;
-        margin-bottom: 20rem; 
+        margin-bottom: 17rem;
     }
 
     /* Google Play */
@@ -915,7 +1021,7 @@ footer {
         transform: scale(1.3); /* ChatGPT */
         margin-right: 18rem;
         margin-left: -4.59rem;
-        margin-bottom: 20rem; 
+        margin-bottom: 17rem; 
     }
 
     /* Discover more */
@@ -938,10 +1044,11 @@ footer {
     /* Stacked phones (spans from row 1 to row 5 on the right side) */
     #showcase-item-6 {
         grid-column: 3; 
-        grid-row: 1 / span 3; 
+        grid-row: 1 / span 3;
+         
         margin-right: -.2rem;
         margin-top: 2rem;
-        margin-bottom: -1.38rem;
+        margin-bottom: -3.1rem;
     }
     
 
@@ -981,8 +1088,18 @@ footer {
         text-align: start;
         
         #af-title {
-            font-size: 3rem;
             margin-top: -.3rem;
+            
+            font-size: 34px;
+            
+            @media (min-width: 768px) {
+                font-size: 44px;
+            }
+            
+            @media (min-width: 1400px) {
+                font-size: 56px;
+            }
+            
         }
         
     }
