--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,19 @@ From there on, I've tried to incorporate a one to one replication of the project
     --clr-grad-2: 293, 82%, 60%; /* HSL values for #DA46EF */
     --clr-grad-3: 238, 80%, 67%; /* HSL values for #6366F1 */
     
-    
+    /* Something similar was found in a bootstrap css file. */
+    /* --linear-gradient: linear-gradient(0deg, 
+    rgba(99,102,241,0.09677419354838712) 0%,
+    rgba(218,70,239,0.06912442396313367) 42%,
+    rgba(241,244,253,0) 83%
+    ); */
+
+    --linear-gradient: linear-gradient(355deg, 
+    rgba(99,102,241,0.1) 0%, 
+    rgba(218,70,239,0.05) 42%, 
+    rgba(241,244,253,0.07) 83%
+    );
+
 }
 
 /* ------------------------------------------------------------- MOBILE VERSION / BASE-LINE CONFIGURATION */
@@ -147,14 +159,15 @@ p {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center; */
-    background-color: #fff;
+    background: rgb(99, 102, 241);
 
     /* Gradient background */ /* Got some help from ChatGPT here, or rather mostly with changing the colours in the root section. */
-    background: linear-gradient(170deg, 
+    /* background: linear-gradient(170deg, 
     hsla(var(--clr-grad-1), 0.1) 30%,
     hsla(var(--clr-grad-2), 0.1) 70%,
     hsla(var(--clr-grad-3), 0.1) 100%
-    );
+    ); */
+    background: var(--linear-gradient);
 }
 
 /* This code dictates how links should behave. */
@@ -163,9 +176,10 @@ a {
     text-decoration: none;
 }
 a:hover {
-    color: var(--color-primary);
+    color: var(--color-gray-500);
     /* text-decoration: underline; */
 }
+
 
 
 /* This handles how buttons should look, act and feel. */
@@ -216,9 +230,14 @@ a:hover {
     z-index: -1;
 }
 
-.btn-circle:hover {
-    color: var(--color-primary);
+.btn-circle:hover::before {
+    background-color: var(--color-gray-500); /* Lighter gray when hovering */
 }
+
+.btn-circle:hover {
+    color: var(--color-black);
+}
+
 
 body.dark-mode .btn-circle {
     color: rgba(255, 255, 255, 1);
@@ -228,7 +247,27 @@ body.dark-mode .btn-circle {
     }
 }
 
-.btn-round-white {
+.btn-download-app {
+    background-color: var(--color-black);
+    color: var(--color-white);
+    border-radius: 8px;
+    padding: 12px 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    
+}
+
+.btn-download-app:hover {
+    background-color: var(--color-gray-700);
+    /* color: var(--color-white); */
+    text-decoration: none;
+}
+
+
+
+/* .btn-round-white {
     background-color: var(--color-white);
     color: var(--color-white);
     border-radius: 100%;
@@ -245,9 +284,9 @@ body.dark-mode .btn-circle {
 }
 .btn-round-white i {
     margin-right: .5rem;
-}
+} */
 
-.btn-round-grey {
+/* .btn-round-grey {
     background-color: var(--color-secondary);
     color: var(--color-white);
     border-radius: 100%;
@@ -264,10 +303,10 @@ body.dark-mode .btn-circle {
 }
 .btn-round-grey i {
     margin-right: .5rem;
-}
+} */
 
 
-.btn-app {
+/* .btn-app {
     background-color: var(--color-black);
     border-radius: 8px;
     padding: 10px 25px;
@@ -285,7 +324,8 @@ body.dark-mode .btn-circle {
 }
 .btn-app i {
     margin-right: .5rem;
-}
+} */
+
 
 
 
@@ -310,21 +350,33 @@ body.dark-mode .btn-circle {
         }
     }
 
-    .btn-app {
+    .btn-download-app {
+        background-color: var(--color-gray-200);
+    }
+    .btn-download-app:hover {
+        background-color: var(--color-gray-400);
+    }
+    
+    
+    
+    
+    .btn-circle:hover {
+        background-color: var(--color-gray-700);
+    }
+    
+    .content p {
+        color: rgba(255, 255, 255, 0.5);
+        
+    }
+    
+    /* .btn-app {
         background-color: var(--color-gray-200);
     }
     .btn-app:hover {
         background-color: var(--color-gray-500);
-    }
+    } */
 
-    .btn-round-white {
-        background-color: var(--color-gray-900);
-    }
-    .btn-round-white:hover {
-        background-color: var(--color-primary);
-    }
-
-    #showcase-item-2 {
+    /* #showcase-item-2 {
         h2 {
             color: var(--color-white);
             opacity: 70%;
@@ -345,6 +397,11 @@ body.dark-mode .btn-circle {
             opacity: 25%;
 
         }
+    } */
+
+    /* "Discover More" text colour. */
+    #changecolordamnit {
+        color: rgba(255, 255, 255, 0.5);
     }
 
     .brand-box {
@@ -367,13 +424,14 @@ body.dark-mode .btn-circle {
         }
     }
     
-    .discover-more {
+    /* .discover-more {
         color: rgba(255, 255, 255, 0.5);
-    }
+    } */
 
     #sticky-header.scrolled {
         background-color: var(--color-gray-900);
     }
+
 }
 
 
@@ -385,8 +443,7 @@ body.dark-mode .btn-circle {
     background-color: transparent;
     border: none;
     font-size: 2rem;
-    padding-top: .25rem;
-    
+    padding-top: .25rem; 
 }
 
 /* This part handles the toggle button, for dark/light mode. */
@@ -507,6 +564,174 @@ header .container {
     padding-top: 1rem;
     padding-bottom: .5rem;
 }
+
+
+
+
+/*  Something happened to my code while I was fixing some stuff, 
+    and my knowledge is limited so I basically 'started over' using
+    the school guidance material.
+*/
+
+
+#hero {
+    /* background: rgb(99, 102, 241); */
+    /* background: var(--linear-gradient); */
+    padding-bottom: 2rem;
+    
+    /* height: 800px; */
+    /* overflow: hidden; */
+    
+    @media (min-width: 768px) {
+        padding-bottom: 0;
+    }
+    
+
+    .container {
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: 1fr;
+        grid-template-areas:    "headline"
+                                "content";
+        
+        @media (min-width: 768px) {
+            grid-template-columns: 40% 1fr;
+            grid-template-areas:    "headline headline"
+                                    "content images";
+        }
+        
+        @media (min-width: 1400px) {
+            grid-template-columns: 2fr 3fr;
+            grid-template-areas:    "headline images"
+                                    "content images";
+        }
+    }
+
+    .headline {
+        grid-area: headline;
+        text-align: center;
+        
+        h1 {
+            font-size: 34px;
+            margin-top: 2rem;
+            
+            @media (min-width: 768px) {
+                font-size: 44px;
+                margin-top: 4rem;
+                margin-bottom: 2rem;
+            }
+            
+            @media (min-width: 1400px) {
+                font-size: 56px;
+                text-align: left;
+                margin-top: 10rem;
+                margin-bottom: -1rem;
+                
+            }
+        }
+    }
+
+    .content {
+        grid-area: content;
+        text-align: center;
+
+        @media (min-width: 768px) {
+            text-align: left;           
+        }
+
+        p {
+            font-size: 18px;
+            margin-bottom: 3rem;
+
+            .tablet-line-break {
+                display: none;
+
+                @media (min-width: 768px) {
+                    display: inline;
+                }
+            }
+        }    
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            @media (min-width: 1400px) {
+                flex-direction: row;
+            }
+
+        }
+        
+        .discover-more {
+            color: var(--color-gray-900);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 2.5rem;
+            
+            @media (min-width: 768px) {
+                justify-content: flex-start;
+                margin-bottom: 2.5rem;
+            }
+            
+            @media (min-width: 1400px) {
+                margin-top: 14rem;
+            }
+        }
+    }
+    .images {
+        grid-area: images;
+        display: none;
+        position: relative;
+        
+        @media (min-width: 768px) {
+            display: block;
+            width: 100%;
+        }
+
+        @media (min-width: 1400px) {
+            margin-top: 10rem;    
+        }
+
+        .img-back {
+            position: absolute;
+            z-index: -10;
+            bottom: 0;
+            right: 135px;
+            height: auto;
+            width: 65%;
+
+            @media (min-width: 1400px) {
+                right: 205px;
+                max-height: 80%;
+            }
+        }
+
+        .img-front {
+            position: absolute;
+            z-index: -5;
+            bottom: 0;
+            right: 0;
+            height: auto;
+            width: 65%;
+
+            @media (min-width: 1400px) {
+                max-height: 100%;
+            }
+        }
+    }      
+}
+
+
+/* OLD CODE STARTS HERE!  */
+/* OLD CODE STARTS HERE!  */
+/* OLD CODE STARTS HERE!  */
+/* OLD CODE STARTS HERE!  */
+/* OLD CODE STARTS HERE!  */
+
+/* There are lots of pieces in the code that is actually in use. I am currently commenting everything that isn't in use. */
+
 
 /* This part handles the main & main sections of the entire site */
 /*  */
@@ -702,7 +927,10 @@ app-features-grid {
         padding: 1rem;
         margin-top: 1rem;
         
-        
+        &:hover {
+            box-shadow: 0 1px 5px var(--color-gray-700);
+            border-radius: .5rem;
+        }
     }
 
     .af-img-container img {
@@ -894,9 +1122,9 @@ footer {
     .full-width-line {
         width: 100%;
         border: none;          /* Remove default styling */
-        border-top: 2px solid black;  /* Define the line */
+        border-top: 2px solid var(--color-almostblack-blue);  /* Define the line */
         margin: 0;             /* Adjust margins as needed */
-        color: var(--color-almostblack-blue);
+        
     }
 
 
