--- a/css/old.main/old.main.css
+++ b/css/old.main/old.main.css
@@ -1,4 +1,4 @@
-.new-code {display: none;}
+.new-code {display: block;}
 
 /* The code for the navigation code was directly taken from a teachers video, 
 there's been some deviation from it, and colours added since this is something the project refers to.
@@ -406,7 +406,7 @@ body.dark-mode .btn-circle {
     } */
 
     /* "Discover More" text colour. */
-    #changecolordamnit {
+    .changecolordamnit {
         color: rgba(255, 255, 255, 0.5);
     }
 
@@ -598,7 +598,150 @@ header .container {
     the school guidance material.
 */
 
+#hero {
+    padding-bottom: 2rem;
+    
+    @media (min-width: 768px) {
+        padding-bottom: 0;
+    }
+    
 
+    .container {
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: 1fr;
+        grid-template-areas:    "headline"
+                                "content";
+        
+        @media (min-width: 768px) {
+            grid-template-columns: 40% 1fr;
+            grid-template-areas:    "headline headline"
+                                    "content images";
+        }
+        
+        @media (min-width: 1400px) {
+            grid-template-columns: 2fr 3fr;
+            grid-template-areas:    "headline images"
+                                    "content images";
+        }
+    }
+
+    .headline {
+        grid-area: headline;
+        text-align: center;
+        
+        h1 {
+            font-size: 34px;
+            font-weight: 800;
+            margin-top: 2rem;
+            
+            @media (min-width: 768px) {
+                font-size: 44px;
+                margin-top: 4rem;
+                margin-bottom: 2rem;
+            }
+            
+            @media (min-width: 1400px) {
+                font-size: 56px;
+                text-align: left;
+                margin-top: 10rem;
+                margin-bottom: -1rem;
+                
+            }
+        }
+    }
+
+    .content {
+        grid-area: content;
+        text-align: center;
+
+        @media (min-width: 768px) {
+            text-align: left;           
+        }
+
+        p {
+            font-size: 18px;
+            margin-bottom: 3rem;
+
+            .tablet-line-break {
+                display: none;
+
+                @media (min-width: 768px) {
+                    display: inline;
+                }
+            }
+        }    
+        .buttons {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            @media (min-width: 1400px) {
+                flex-direction: row;
+            }
+
+        }
+        
+        .discover-more {
+            color: var(--color-gray-900);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            margin-top: 2.5rem;
+            
+            @media (min-width: 768px) {
+                justify-content: flex-start;
+                margin-bottom: 2.5rem;
+            }
+            
+            @media (min-width: 1400px) {
+                margin-top: 14rem;
+            }
+        }
+    }
+    .images {
+        grid-area: images;
+        display: none;
+        position: relative;
+        
+        @media (min-width: 768px) {
+            display: block;
+            width: 100%;
+        }
+
+        @media (min-width: 1400px) {
+            margin-top: 10rem;    
+        }
+
+        .img-back {
+            position: absolute;
+            z-index: -10;
+            bottom: 0;
+            right: 135px;
+            height: auto;
+            width: 65%;
+
+            @media (min-width: 1400px) {
+                right: 205px;
+                max-height: 80%;
+            }
+        }
+
+        .img-front {
+            position: absolute;
+            z-index: -5;
+            bottom: 0;
+            right: 0;
+            height: auto;
+            width: 65%;
+
+            @media (min-width: 1400px) {
+                max-height: 100%;
+            }
+        }
+    }      
+}
 
 
 
