--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -59,6 +59,13 @@
             text-align: left;           
         }
 
+        a { 
+            text-decoration: none;
+        }
+        a:hover {
+            color: var(--color-primary);
+        }
+
         p {
             font-size: 18px;
             margin-bottom: 3rem;
@@ -83,7 +90,7 @@
         }
         
         .discover-more {
-            color: var(--color-gray-900);
+            color: var(--color-tex-bl-bl);
             display: flex;
             align-items: center;
             justify-content: center;
