--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 @import url('/css/sections/_showcase.css');
 @import url('/css/sections/_brands.css');
 @import url('/css/sections/_app-features.css');
+/* @import url('/css/sections/_carousel.css'); */
 
 /* FONT - MANROPE | GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
@@ -25,10 +26,10 @@ body, section, div, header, footer, main, aside, nav, blockquote, p, span {
 }
 
 body {
-    font-family: "Manrope", sans-serif;
+    /* font-family: "Manrope", sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal; */
     font-size: 18px;
 }
 
