--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -1,43 +1,69 @@
-#af-phone {
-    display: none;
 
+.flexit {
+    
+    @media (width > 1400px) {
+        
+        display: flex;
+        flex-direction: row;
+        gap: 11rem;
+    }
+    
+    #af-phone {
+        display: none;
+        
+        @media (width > 1400px) {
+            display: block;
+        }
+    }
 }
 
 .app-features-grid {
     display: grid;
-}
-
-.app-features-info {
-    text-align: center;
-
-    #af-title {
-        font-size: 27.9px;
-        font-weight: 800;
-        /* margin-top: 4rem; */
-        
-        @media (min-width: 768px) {
-            font-size: 33.5px;
-        }
-        
-        @media (min-width: 1400px) {
-            font-size: 40px;
-            margin-top: -.3rem;
-        }
-    }
     
-    #af-title-text {
-        color: var(--color-gray-800);
-        font-size: 1.1rem;
-
-        margin-bottom: 2rem;
+    .app-features-info {
+        text-align: center;
+        margin-top: 1rem;
         
+        @media (width > 1400px) {
+            text-align: left;
+        }
+    
+        #af-title {
+            font-size: 27.9px;
+            font-weight: 800;
+            /* margin-top: 4rem; */
+            
+            @media (width > 768px) {
+                font-size: 33.5px;
+                
+                @media (width > 1400px) {
+                    font-size: 40px;
+                }
+            }
+            
+        }
+        
+        #af-title-text {
+            font-size: 18px;
+            margin-bottom: 2rem;    
+        }
     }
 }
+
+
 
 .features-grid {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+    
+    @media (width > 768px) {
+        grid-template-columns: 1fr 1fr;
+        
+        @media (width > 1400px) {
+            gap: 2rem;
+        }
+    }
     
 }
 
@@ -47,32 +73,19 @@
     grid-template-rows: auto;
     justify-content: flex-start;
     width: 100%;
-    /* display: flex; */
-    /* padding-inline: 3rem; */
-    /* margin: 0 auto; */
-    /* max-width: 900px; */
-    /* max-width: 1500px; */
-    /* display: grid; */
     gap: 1.3rem;
-    
-    
+       
     .af-img-container {
         position: relative;
         justify-content: center;
         justify-items: center;
         width: 58px;
         height: 60px;
-
-        /* width: 3.6rem;
-        height: 3.6rem; */
-        /* top: 0;
-        left: 0; */
-
         padding: 1rem;
         margin-top: 1rem;
         
         &:hover {
-            box-shadow: 0 1px 5px var(--color-gray-700);
+            box-shadow: 0 0 5px var(--color-gray-700);
             border-radius: .5rem;
         }
     }
@@ -82,6 +95,7 @@
         height: auto;
     }
     
+    /* ChatGPT helped out with this. */
     .af-img-container::before {
         content: '';
         position: absolute;
@@ -95,72 +109,25 @@
         z-index: -1; /* Behind the image */
     }
 
-
     .af-text-container {
         gap: 3rem;
-
+        
         h2 {
-            font-size: 1.3rem;
+            font-size: 20px;
         }
-
+        
         p {
             color: var(--color-secondary);
-            /* font-size: 1rem; */
+            font-size: 16px;
         }
     }
-
 }
 
+/* ChatGPT helped out with this. */
 body.dark-mode .af-img-container::before {
     background: rgba(243, 246, 255, 0.05); /* Same color with 5% opacity for dark mode */
 }
 
 #features-1 {
     margin-bottom: 10px;
-}
-
-@media (min-width: 768px) {
-
-    .features-grid {
-        grid-template-columns: 1fr 1fr;        
-    }
-
-}
-
-@media (min-width: 1400px) {
-
-    .flexit {
-        display: flex;
-        flex-direction: row;
-
-        gap: 11rem;
-
-        #af-phone {
-            display: block;
-        }
-    }
-    .app-features-info {
-        text-align: start;
-        
-        #af-title {
-            margin-top: -.3rem;
-            
-            font-size: 27.9px;
-            
-            @media (min-width: 768px) {
-                font-size: 33.5px;
-            }
-            
-            @media (min-width: 1400px) {
-                font-size: 40px;
-            }
-            
-        }
-        
-    }
-
-    .features-grid {
-        gap: 2rem;
-    }
-
 }
