--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -1,4 +1,4 @@
-#hero {
+#showcase {
     padding-bottom: 2rem;
     
     @media (min-width: 768px) {
@@ -61,9 +61,10 @@
 
         a { 
             text-decoration: none;
-        }
-        a:hover {
-            color: var(--color-primary);
+            
+            &:hover {
+                color: var(--color-primary);
+            }
         }
 
         p {
@@ -77,7 +78,8 @@
                     display: inline;
                 }
             }
-        }    
+        }
+
         .buttons {
             display: flex;
             flex-direction: column;
