'Lighthouse' gives me 67 performance. So I'm trying to fix that and figure out why, so there are multiple small changes being done.

--- a/css/other/_dark-mode.css
+++ b/css/other/_dark-mode.css
@@ -31,9 +31,9 @@
     /* Showcase Section */
 
     /* Showcase Title */
-    #sc-title {
+    /* #sc-title {
         color: var(--color-white);
-    }
+    } */
     /* Showcase Text */
     #sc-text {
         color: var(--color-white);
