--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -1,3 +1,8 @@
+/*  These CSS lines are directly copied from the figma file Desktop mode, 
+    then I used ChatGPT.com to order them up and give them names.
+    I saved them here in order to test it out I don't know if it's going to work.
+    The thoughts is to create a functional carousel slider. */
+
 /* Slider */
 .slider {
     position: absolute;
