--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -17,13 +17,14 @@
             grid-template-columns: 40% 1fr;
             grid-template-areas:    "headline headline"
                                     "content images";
+                                    
+            @media (width > 1400px) {
+                grid-template-columns: 2fr 3fr;
+                grid-template-areas:    "headline images"
+                                        "content images";
+            }
         }
         
-        @media (min-width: 1400px) {
-            grid-template-columns: 2fr 3fr;
-            grid-template-areas:    "headline images"
-                                    "content images";
-        }
     }
 
     .headline {
@@ -35,19 +36,20 @@
             font-weight: 800;
             margin-top: 2rem;
             
-            @media (min-width: 768px) {
+            @media (width > 768px) {
                 font-size: 44px;
                 margin-top: 4rem;
                 margin-bottom: 2rem;
+                
+                @media (width > 1400px) {
+                    font-size: 56px;
+                    text-align: left;
+                    margin-top: 10rem;
+                    margin-bottom: -1rem;
+                    
+                }
             }
             
-            @media (min-width: 1400px) {
-                font-size: 56px;
-                text-align: left;
-                margin-top: 10rem;
-                margin-bottom: -1rem;
-                
-            }
         }
     }
 
@@ -55,7 +57,7 @@
         grid-area: content;
         text-align: center;
 
-        @media (min-width: 768px) {
+        @media (width > 768px) {
             text-align: left;           
         }
 
@@ -71,13 +73,13 @@
             font-size: 18px;
             margin-bottom: 3rem;
 
-            .tablet-line-break {
+            /* .tablet-line-break {
                 display: none;
 
-                @media (min-width: 768px) {
+                @media (width > 768px) {
                     display: inline;
                 }
-            }
+            } */
         }
 
         .buttons {
@@ -85,7 +87,7 @@
             flex-direction: column;
             gap: 1rem;
 
-            @media (min-width: 1400px) {
+            @media (width > 1400px) {
                 flex-direction: row;
             }
 
@@ -99,14 +101,15 @@
             gap: 1rem;
             margin-top: 2.5rem;
             
-            @media (min-width: 768px) {
+            @media (width > 768px) {
                 justify-content: flex-start;
                 margin-bottom: 2.5rem;
+                
+                @media (width > 1400px) {
+                    margin-top: 14rem;
+                }
             }
             
-            @media (min-width: 1400px) {
-                margin-top: 14rem;
-            }
         }
     }
 
@@ -115,14 +118,15 @@
         display: none;
         position: relative;
         
-        @media (min-width: 768px) {
+        @media (width > 768px) {
             display: block;
             width: 100%;
+            
+            @media (width > 1400px) {
+                margin-top: 8rem;                    
+            }
         }
 
-        @media (min-width: 1400px) {
-            margin-top: 10rem;    
-        }
 
         .img-back {
             position: absolute;
@@ -135,6 +139,7 @@
             @media (min-width: 1400px) {
                 right: 205px;
                 max-height: 80%;
+                margin-right: -3rem;
             }
         }
 
@@ -148,6 +153,7 @@
 
             @media (min-width: 1400px) {
                 max-height: 100%;
+                margin-right: -4rem;
             }
         }
     }      
