--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 
 * {
     box-sizing: border-box;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
 }
 
 body, section, div, header, footer, main, aside, nav, blockquote, p, span {
@@ -57,9 +57,10 @@ body {
     
     @media (width > 768px) {
         max-width: 720px;
-    }
-    @media (width > 1400px) {
-        max-width: 1360px;
+        
+        @media (width > 1400px) {
+            max-width: 1360px;
+        }
     }
 }
 
@@ -94,28 +95,27 @@ footer {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        
+        @media (width > 768px) {
+            
+            
+            flex-direction: row;
+            padding-top: .5rem;
+            padding-bottom: .5rem;
+            gap: 5px;        
+            
+            @media (width > 1400px) {
+                padding-top: 1rem;
+                padding-bottom: 1rem;
+            }
+        }
+        
+        
+        
+        
     }
     
     .credit {
         display: block;
     }    
-}
-
-@media (width > 768px) {
-    
-    
-    footer .container {
-        flex-direction: row;
-        padding-top: .5rem;
-        padding-bottom: .5rem;
-        gap: 5px;        
-    }
-}
-
-@media (width > 1400px) {
-
-    footer .container {
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-    }  
 }
