--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -45,7 +45,8 @@
         
         #af-title-text {
             font-size: 18px;
-            margin-bottom: 2rem;    
+            margin-bottom: 2rem;
+            color: var(--color-gray-600);    
         }
     }
 }
@@ -112,12 +113,13 @@
     .af-text-container {
         gap: 3rem;
         
-        h2 {
+        h3 {
+            color: var(--color-gray-900);
             font-size: 20px;
         }
         
         p {
-            color: var(--color-secondary);
+            color: var(--color-gray-700);
             font-size: 16px;
         }
     }
