--- a/css/sections/_showcase.css
+++ b/css/sections/_showcase.css
@@ -19,7 +19,8 @@
                                     "content images";
                                     
             @media (width > 1400px) {
-                grid-template-columns: 2fr 3fr;
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
                 grid-template-areas:    "headline images"
                                         "content images";
             }
@@ -31,25 +32,20 @@
         grid-area: headline;
         text-align: center;
         
-        h1 {
-            font-size: 34px;
-            font-weight: 800;
-            margin-top: 2rem;
+        font-size: 34px;
+        font-weight: 800;
+        
+        @media (width > 768px) {
+            /* font-size: 44px; */
+            /* margin-top: 4rem; */
+            /* margin-bottom: 2rem; */
             
-            @media (width > 768px) {
-                font-size: 44px;
-                margin-top: 4rem;
-                margin-bottom: 2rem;
-                
-                @media (width > 1400px) {
-                    font-size: 56px;
-                    text-align: left;
-                    margin-top: 10rem;
-                    margin-bottom: -1rem;
-                    
-                }
+            @media (width > 1400px) {
+                font-size: 40px;
+                text-align: left;
+                margin-top: 5.5rem;
+                margin-bottom: -3rem;   
             }
-            
         }
     }
 
@@ -70,16 +66,16 @@
         }
 
         p {
-            font-size: 18px;
+            /* font-size: 18px; */
             margin-bottom: 3rem;
 
-            /* .tablet-line-break {
+            .tablet-line-break {
                 display: none;
 
                 @media (width > 768px) {
                     display: inline;
                 }
-            } */
+            }
         }
 
         .buttons {
@@ -106,7 +102,7 @@
                 margin-bottom: 2.5rem;
                 
                 @media (width > 1400px) {
-                    margin-top: 14rem;
+                    margin-top: 15rem;
                 }
             }
             
@@ -123,7 +119,7 @@
             width: 100%;
             
             @media (width > 1400px) {
-                margin-top: 8rem;                    
+                margin-top: 6rem;                    
             }
         }
 
@@ -139,7 +135,7 @@
             @media (min-width: 1400px) {
                 right: 205px;
                 max-height: 80%;
-                margin-right: -3rem;
+                
             }
         }
 
@@ -153,7 +149,7 @@
 
             @media (min-width: 1400px) {
                 max-height: 100%;
-                margin-right: -4rem;
+                
             }
         }
     }      
