--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -1,7 +1,7 @@
 
 .flexit {
     
-    @media (width > 1400px) {
+    @media (min-width: 1400px) {
         
         display: flex;
         flex-direction: row;
@@ -11,7 +11,7 @@
     #af-phone {
         display: none;
         
-        @media (width > 1400px) {
+        @media (min-width: 1400px) {
             display: block;
         }
     }
@@ -24,7 +24,7 @@
         text-align: center;
         margin-top: 1rem;
         
-        @media (width > 1400px) {
+        @media (min-width: 1400px) {
             text-align: left;
         }
     
@@ -33,10 +33,10 @@
             font-weight: 800;
             /* margin-top: 4rem; */
             
-            @media (width > 768px) {
+            @media (min-width: 768px) {
                 font-size: 33.5px;
                 
-                @media (width > 1400px) {
+                @media (min-width: 1400px) {
                     font-size: 40px;
                 }
             }
@@ -58,10 +58,10 @@
     grid-template-columns: 1fr;
     gap: 1rem;
     
-    @media (width > 768px) {
+    @media (min-width: 768px) {
         grid-template-columns: 1fr 1fr;
         
-        @media (width > 1400px) {
+        @media (min-width: 1400px) {
             gap: 2rem;
         }
     }
@@ -114,12 +114,12 @@
         gap: 3rem;
         
         h3 {
-            color: var(--color-gray-900);
+            /* color: var(--color-gray-900); */
             font-size: 20px;
         }
         
         p {
-            color: var(--color-gray-700);
+            /* color: var(--color-gray-700); */
             font-size: 16px;
         }
     }
