--- a/css/sections/_brands.css
+++ b/css/sections/_brands.css
@@ -2,11 +2,11 @@
     display: none; 
     #brand-5, #brand-6 { display: none; }
 
-    @media (width > 768px) {
+    @media (min-width: 768px) {
         display: block;
         margin-top: 3rem;
 
-        @media (width > 1400px) {
+        @media (min-width: 1400px) {
             margin-top: 4.5rem;
             margin-bottom: 7rem;
     
